# simple-api

./: Dockerfile  Dockerfile.check_client  Dockerfile.check_validation  Dockerfile.hypercorn  LICENSE  README.md  pyproject.toml  send_mixed_requests.sh  send_ok_requests.sh
simple_api/: __main__.py  app.py  check_client.py  check_validation.py
