[tool.poetry]
name = "simple-api"
version = "0.0.0"
description = "Simple starlette service"
authors = ["LS"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

starlette = "0.22.0"
pydantic = "1.10.2"
uvicorn = { version = "=0.20.0", extras = ["standard"] }

[tool.poetry.scripts]
simple_api = "simple_api.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
